[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"
authors = ["Christer Jensen <chr.code@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive", "cargo", "help"] }
common = { path = "common" }
crossterm = "0.25"
solutions_2015 = { path = "2015" }
